1.4.0
- Added smoky-grey as the new standard skin.
- Added some primary formatting to the Hans skin to prevent the host
  system from messing with the css formatting of the skin.
- Added the SkinRender class to the skin directory, so every skin can
  do some special stuff.
- Added rudimentary translation support for the messaging class.
- Change: Cleaned up rendering process.
- Bugfix: Removed the jQuery library. ReqireJS should now work normally
  when used on the frontend.
- Bugfix: Generated sourcecode now works with IteratorAggregate when
  trying to access a single element from the iterator.
- Bugfix: Configured debugging methods will not be called anymore,
  if they require a parameter.
- Bugfix: Prevent the calling of configured debug methods which are
  callable, but do not exist thanks to the __call() function.
- Bugfix / Change: When kreXX encounters an emergency break, the
  frontend configuration will be accessible, giving the dev the
  opportunity to change the settings.

1.3.6
- Added scope analysis. Protected an private variables are treated
  as public in case they are reachable with the called scope.
- Class properties are now sorted alphabetically.
- Change: Replaced the option analysePublicMethods with
  analyseMethodsAtall. The old option does not really make sense
  anymore, since we introduced the scope analysis.
- Change: Improved the automatic code generation for recursions.
- Change: Standard value for 'backtraceAnalysis' is now 'deep'.
- Bugfix: Added the "$" in front of static properties.
- Bugfix: Automatic selection of the generated source code now works
  correct.
- Bugfix: Code generation now works in IE and Edge.
- Bugfix: Several JS fixes for IE9.

1.3.5
- Added code analysis to determine the name of the variable we are
  analysing.
- Added warning to tell the user that we are not starting an other
  analysis, because we will reach output => maxCall.
- Bugfix: Recursion clicking does not produce double ids anymore.

1.3.4