@@ -449,8 +449,9 @@ class Objects {
     if (is_a($data, 'Traversable')) {
       $parameter = iterator_to_array($data);
       $anon_function = function (&$data) {
-        // This could be anything, we need to examine it first.
-        return Variables::analysisHub($data);
+        // This should be an array. Giving it directly to the analysis hub would
+        // create another useless nest.
+        return Variables::iterateThrough($data);
       };
       // If we are facing a IteratorAggregate, we can not access the array
       // directly. To do this, we must get the Iterator from the class.
