@@ -6,6 +6,8 @@
   do some special stuff.
 - Added rudimentary translation support for the messaging class.
 - Change: Cleaned up rendering process.
+- Change: Removed the useless array nest from the traversable info, to
+  produce a better readability.
 - Bugfix: Removed the jQuery library. ReqireJS should now work normally
   when used on the frontend.
 - Bugfix: Generated sourcecode now works with IteratorAggregate when
